refactor: replace get(0) with getFirst() in various test files